--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -5,3 +5,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* ajuda o browser a usar UI dark (autocomplete, calendários, etc.) */
+@media (prefers-color-scheme: dark) {
+  :root { color-scheme: dark; }
+}
